# experimental

./: .bazelrc.local  .cirrus.yml  .clog.toml  .restyled.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile.cirrus  README.md
.cirrus/: Dockerfile
.github/: release-drafter.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  release.yaml
.github/buildfarm/: authorized_keys  generate-wg  server-2.yml  wg0-1.conf  wg0-2.conf  wg0-3.conf  wg0-4.conf  wg0-5.conf  wg0-6.conf  wg0-7.conf  wg0-8.conf  wg0-9.conf  wg0.conf.template  worker-2.yml  worker-3.yml  worker-4.yml  worker-5.yml  worker-6.yml  worker-7.yml  worker-8.yml  worker-9.yml  worker.yml.template
.github/workflows/: automerge.yml  ci.yml  deploy.yml  docker.yml  draft.yml  pages.yml  release.yml
.netlify/: Dockerfile  build.sh  state.json
tools/: update-versions.sh
users/iphydf/: README.md
users/iphydf/camera/: BUILD.bazel  camera.cpp  camera.h  imagesettings.cpp  imagesettings.h  main.cpp  videosettings.cpp  videosettings.h
users/iphydf/qt-toxcore-c/: BUILD.bazel  core.cpp  core.h
users/iphydf/qt-toxcore-c/test/: core_test.cpp
