load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//third_party/qt:build_defs.bzl", "qt_moc", "qt_uic")

package(default_visibility = ["//experimental:__subpackages__"])

# MOC headers
# =========================================================

qt_moc(
    name = "camera_moc",
    srcs = [
        "camera.h",
        "imagesettings.h",
        "videosettings.h",
    ],
    deps = ["@qt//:qt_widgets"],
)

# User interface headers
# =========================================================

qt_uic(
    name = "camera_ui",
    srcs = [
        "camera.ui",
        "imagesettings.ui",
        "videosettings.ui",
    ],
)

# Main binary
# =========================================================

cc_library(
    name = "camera_main",
    srcs = [
        "camera.cpp",
        "imagesettings.cpp",
        "main.cpp",
        "videosettings.cpp",
        ":camera_moc",
        ":camera_ui",
    ],
    hdrs = [
        "camera.h",
        "imagesettings.h",
        "videosettings.h",
    ],
    copts = select({
        "//tools/config:freebsd": [],
        "//tools/config:linux": ["-fPIC"],
        "//tools/config:osx": [],
        "//tools/config:windows": [],
    }),
    includes = ["."],
    tags = ["no-cross"],
    deps = [
        "@gl",
        "@qt//:qt_core",
        "@qt//:qt_gui",
        "@qt//:qt_multimedia",
        "@qt//:qt_multimediawidgets",
        "@qt//:qt_widgets",
    ],
)

cc_binary(
    name = "camera",
    tags = ["no-cross"],
    deps = [":camera_main"],
)
